--- a/package.json
+++ b/package.json
@@ -1,34 +1,58 @@
 {
-  "name": "neurocann-coding-challenge",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "neurocann-coding-challenge",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@react-md/avatar": "^2.3.1",
+        "@react-md/button": "^2.3.1",
+        "@react-md/card": "^2.3.1",
+        "@react-md/icon": "^2.3.1",
+        "@react-md/list": "^2.3.1",
+        "@react-md/media": "^2.3.1",
+        "@react-md/theme": "^2.3.1",
+        "@react-md/transition": "^2.3.1",
+        "@react-md/typography": "^2.3.1",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2",
+        "@types/jest": "^26.0.14",
+        "@types/node": "^14.11.8",
+        "@types/react": "^16.9.52",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.6",
+        "axios": "^0.20.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "3.4.3",
+        "typescript": "^4.0.3"
+    },
+    "scripts": {
+        "dev": "concurrently --kill-others \"npm run start\" \"npm run watch:sass\"",
+        "watch:sass": "node-sass --include-path=node_modules src/scss/main.scss src/App.css -w",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "concurrently": "^5.3.0",
+        "node-sass": "^4.14.1",
+        "react-md": "^2.3.1"
+    }
 }
