--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.5"
     },
     "scripts": {
         "dev": "concurrently --kill-others \"npm run start\" \"npm run watch:sass\"",
@@ -53,6 +53,11 @@
     "devDependencies": {
         "concurrently": "^5.3.0",
         "node-sass": "^4.14.1",
-        "react-md": "^2.3.1"
+        "react-md": "^2.3.1",
+        "react-test-renderer": "^16.14.0"
+    },
+    "resolutions": {
+        "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+        "**/@typescript-eslint/parser": "^4.1.1"
     }
 }
